ags (5.1.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved gtk-doc conditional build
	* improved gtk-doc rebuild sections

ags (5.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved gtk-doc conditional built vst3 related types
	* improved gtk-doc conditional built libinstpatch related types

ags (5.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented missing persistence of machine's dialog model
	* fixed automation XML persistence missing channel-type and control-name
	* fixed machine selector insert machine radio button

ags (5.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented missing persistence of tempo program and marker

ags (5.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented tempo editor composite widget
	* implemented tempo widget
	* implemented ramp program marker dialog used to automate tempo
	* implemented AgsProgram and AgsMarker
	* implemented ags_level_set_data_format() and ags_level_set_samplerate()
	* implemented ags_sound_provider_set_program() and ags_sound_provider_get_program()

ags (5.0.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved VST3 support
	* fixed octave upper and lower of ags-fx-sf2 and ags-fx-sfz

ags (5.0.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsLiveLv2Bridge missing preset
	* modified default size of application window
	* modified default size of file chooser open dialog

ags (5.0.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* new range of AgsSF2Synth WAV 1 - octave control from -12.0 to 12.0
	* new range of AgsSFZSynth WAV 1 - octave control from -12.0 to 12.0
	* implemented provide system time to ags-fx-vst3
	* implemented ags_soundcard_util_calc_system_time()
	* implemented ags_soundcard_util_calc_time_samples()
	* implemented ags_soundcard_util_calc_time_samples_absolute()