@@ -1,15 +1,0 @@
-[library]
-description = "Advanced Gtk+ Sequencer Audio"
-authors = "AGS Development Team"
-license = "GPL-3-or-later"
-browse_url = "http://git.savannah.nongnu.org/cgit/gsequencer.git"
-repository_url = "http://git.savannah.nongnu.org/cgit/gsequencer.git"
-website_url = "http://nongnu.org/gsequencer"
-dependencies = [
-  "GObject-2.0",
-]
-
-[dependencies."GObject-2.0"]
-name = "GObject"
-description = "The base type system library"
-docs_url = "https://developer.gnome.org/gobject/stable"
