@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <title>krähemann.com - API</title>
+    <title>nongnu.org/gsequencer - API</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="http://nongnu.org/gsequencer/styles/default.css" type="text/css">
     <meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
