@@ -1,1 +1,1 @@
-@GSEQUENCER_VERSION@
+@VERSION@
